@@ -9,7 +9,7 @@ EMAIL_LIST=mtutaj@mcw.edu
 
 # run java app by calling gradle-generated wrapper script
 cd $APPDIR
-java -Dspring.config=$APPDIR/../properties/default_db2.xml \
+java -Xmx200g -Dspring.config=$APPDIR/../properties/default_db2.xml \
     -Dlog4j.configuration=file://$APPDIR/properties/log4j.properties \
     -jar lib/$APPNAME.jar "$@" | tee run.log 2>&1
 
