@@ -1,3 +1,6 @@
+Oct 21, 2021
+  apache log analyzer alpha: optimized code to produce
+
 Oct 20, 2021
   alpha version of apache log analyzer
 
